--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,6 +78,7 @@ body {
 
 .responsive-image {
     height: 100%;
+    width: 100%;
     object-fit: cover;  
     object-position: center; 
 }
@@ -97,7 +98,9 @@ body {
     height: 50%; 
 }
 
-
+.opacity{
+    opacity: 0.5;
+}
 .inner-center {
     position: absolute;
     top: 15%;
@@ -120,7 +123,7 @@ body {
     text-align: center;        
     font-size:130%;
     font-weight: bold;
-    
+    color: white;
     font-family: 'Times New Roman', Times, serif;
 }
 
@@ -134,6 +137,16 @@ body {
     font-family: 'Times New Roman', Times, serif;
     font-size:130%;
     
+}
+
+.inner-right h1 {
+    color: white;
+    font-size: 200%;
+}
+
+.inner-right p {
+    color: white;
+    font-family: Arial, Helvetica, sans-serif
 }
 
 .inner-right2{
@@ -368,6 +381,7 @@ body {
 
 .main-image4{
     content: url("../img/h.png");
+    opacity: 0.5;
 }
 
 .main-image5{
@@ -463,7 +477,7 @@ p {
     text-align: center;        
     font-size:170%;
     font-weight: bold;
-    
+    color: white;
     font-family: 'Times New Roman', Times, serif;
 }
 
