--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,86 +1,28 @@
 body {
-    margin: 0;
-    padding: 0;
-    background-color: black !important;
-    font: 16px/26px D-DIN-Regular,Arial,Verdana,sans-serif;
     font-weight: 400;
     font-style: normal;
     text-align: left;
-    color: #fff;
-    width: 100%;
-}
-
-
-#header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 100;
-    width: 100%;
-    height: 100px
 }
 
 .header-inner {
-    display: block;
-    position: relative;
-    width: 100%;
     height: 100%;
-    max-width: 1400px;
-    margin: 0 auto;
     text-align: left
 }
 
 #navigation {
-    position: absolute;
-    top: 38px;
-    height: 30px;
     display: inline-block;
-    left: 38.5%
 }
 
-.nav-links {
-    position: relative;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
 
 .nav-links li {
     position: relative;
-    display: inline-block;
-    margin: 0 12px;
-    font-size: 7%;
 }
-
-.nav-links li a {
-    display: block;
-    line-height: 1.4
-}
-
 
 .nav-links a {
     position: relative;
-    font: 14px/28px D-DIN-Bold,Arial,Verdana,sans-serif;
     font-weight: 400;
     font-style: normal;
-    color: #fff;
-    text-transform: uppercase;
-    -webkit-transition: color .25s ease;
-    transition: color .25s ease;
-    text-decoration: none; 
-}
-
-.image-container {
-    position: relative;  
-    height: 100vh;  
-    overflow: hidden; 
-}
-
-.responsive-image {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;  
-    object-position: center; 
+    line-height: 1.4;
 }
 
 .overlay-image {
@@ -133,7 +75,7 @@ body {
     left: 10%;
     width: 35%;
     max-width: 960px;
-    color: rgb(255, 255, 255);       
+    color:white;       
     font-family: 'Times New Roman', Times, serif;
     font-size:130%;
     
@@ -162,6 +104,13 @@ body {
     
 }
 
+.inner-right2 h2 {
+    color: white;
+}
+
+.inner-right2 p {
+    color: white;
+}
 .inner-right3{
 
     position: absolute;
@@ -173,6 +122,7 @@ body {
     font-family: 'Times New Roman', Times, serif;
     font-size:150%;
     z-index: 2;
+    color: white;
 
 }
 .inner-left{
@@ -184,7 +134,7 @@ body {
     color: black;       
     font-family: 'Times New Roman', Times, serif;
     font-size:150%;
-    
+    color: white;
 }
 
 .inner-project{
@@ -205,6 +155,8 @@ body {
     
 }
 
+
+
 .inner-project{
     margin-left: -29%;
 }
@@ -214,30 +166,16 @@ body {
     padding: 10px 20px;
 }
 
-
-
 #footer {
-    background: #000;
     position: relative;
     margin: 0 auto;
-    text-align: center;
-    font: 12px/18px D-DIN-Bold,Arial,Verdana,sans-serif;
     font-weight: 400;
     font-style: normal;
     text-transform: uppercase;
-    color: #979797;
-    padding: 20px 0
-}
-
-#footer span {
-    font-size: 12px;
-    margin: 0 20px
 }
 
 #footer a {
-    font: 12px/24px D-DIN-Bold,Arial,Verdana,sans-serif;
     font-weight: 400;
-    color: #fff
 }
 
 .imgsocial1 {
@@ -281,56 +219,10 @@ body {
     text-decoration: none;
     color: white;
 }
-       
-.contact-form {
-    background-color:black;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    max-width: 400px;
-    width: 100%;
-    margin-left: 37%;
-}
-
-.contact-form h2 {
-    margin-bottom: 20px;
-    font-size: 24px;
-    text-align: center;
-    color: #ffffff;
-}
-        
-.contact-form label {
-    display: block;
-    margin-bottom: 5px;
-    font-weight: bold;
-    color: #ffffff;
-}
-
-.contact-form input, .contact-form textarea {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    color: #ffffff;
-}
 
 
 /* Media queries per mobile */
 @media (max-width: 767px) {
-    
-.header-inner {
-    padding: 0 10px; 
-}
-
-#navigation {
-    top: 10px; 
-    left: 35%;
-}
-
-.nav-links {
-    margin-left: -47%;
-}
 
 .nav-links a{
     font-family: 'D-DIN-Bold', Arial, Verdana, sans-serif;
@@ -386,14 +278,17 @@ body {
 
 .main-image5{
     content: url("../img/amzlgs.jpg");
+    opacity: 0.7;
 }
 
 .main-image6{
     content: url("../img/DecathlonExotec.jpg");
+    opacity: 0.6;
 }
 
 .main-image7{
     content: url("../img/cpu.jpg");
+    opacity: 0.5;
 }
 
 .main-image8{
@@ -418,7 +313,8 @@ h3{
     font-family: 'Times New Roman', Times, serif;
     font-weight: bold;
     font-size:100%;
-    }
+    color: white;
+}
 
 
 .inner-right2{
@@ -444,7 +340,7 @@ h3{
     font-family: 'Times New Roman', Times, serif;
     font-weight: bold;
     font-size:100%;
-
+    color: white;
 }
 
 p {
