--- a/assets/style/stile.css
+++ b/assets/style/stile.css
@@ -18,14 +18,17 @@ body {
   display: block;
   position: relative;
   width: 100%;
+  height: 100%;
   max-width: 1400px;
   margin: 0 auto;
+  text-align: left;
 }
 #navigation {
   position: absolute;
   top: 38px;
   height: 30px;
-  left: 38.5%;
+  display: inline-block;
+  left: 37.5%;
 }
 .nav-links {
   position: relative;
@@ -34,6 +37,7 @@ body {
   padding: 0;
 }
 .nav-links li {
+  position: relative;
   display: inline-block;
   margin: 0 12px;
   font-size: 7%;
@@ -82,7 +86,6 @@ body {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   max-width: 400px;
   width: 100%;
-  margin-left: 37%;
 }
 .contact-form h2 {
   margin-bottom: 20px;
@@ -104,4 +107,16 @@ body {
   border: 1px solid #ccc;
   border-radius: 4px;
   color: #fff;
+}
+@media (max-width: 767px) {
+  .header-inner {
+    padding: 0 10px;
+  }
+  #navigation {
+    margin-top: 0%;
+    left: 35%;
+  }
+  .nav-links {
+    margin-left: -45%;
+  }
 }
