--- a/assets/style/stile.less
+++ b/assets/style/stile.less
@@ -33,17 +33,20 @@ body {
 
 .header-inner {
   display: block;
-  position: relative;
-  width: 100%;
-  max-width: @larghezza-max;
-  margin: 0 auto;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    max-width: 1400px;
+    margin: 0 auto;
+    text-align: left
 }
 
 #navigation {
   position: absolute;
-  top: 38px;
-  height: 30px;
-  left: 38.5%;
+    top: 38px;
+    height: 30px;
+    display: inline-block;
+    left: 37.5%
 }
 
 .nav-links {
@@ -53,6 +56,7 @@ body {
   padding: 0;
 
   li {
+    position: relative;
     display: inline-block;
     margin: 0 12px;
     font-size: 7%;
@@ -111,7 +115,6 @@ body {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   max-width: 400px;
   width: 100%;
-  margin-left: 37%;
 
   h2 {
     margin-bottom: 20px;
@@ -137,3 +140,17 @@ body {
   }
 }
 
+@media (max-width: 767px) {
+  .header-inner {
+    padding: 0 10px;
+  }
+
+  #navigation {
+    margin-top: 0%;
+    left: 35%;
+  }
+
+  .nav-links {
+    margin-left: -45%;
+  }
+}
