--- a/assets/style/stile.css
+++ b/assets/style/stile.css
@@ -114,9 +114,29 @@ body {
   }
   #navigation {
     margin-top: 0%;
-    left: 35%;
+    left: 2.5%;
   }
   .nav-links {
-    margin-left: -45%;
+    position: relative;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+  .nav-links li {
+    position: relative;
+    display: inline-block;
+    margin: 0 8px;
+    font-size: 5%;
+  }
+  .nav-links li a {
+    display: block;
+    font: 14px/28px 'D-DIN-Bold', Arial, Verdana, sans-serif;
+    color: #fff;
+    text-transform: uppercase;
+    transition: color 0.25s ease;
+    text-decoration: none;
+  }
+  .nav-links li a:hover {
+    color: #ffffff;
   }
 }
