--- a/assets/style/stile.css
+++ b/assets/style/stile.css
@@ -86,6 +86,7 @@ body {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   max-width: 400px;
   width: 100%;
+  margin-left: 37%;
 }
 .contact-form h2 {
   margin-bottom: 20px;
