--- a/assets/style/stile.less
+++ b/assets/style/stile.less
@@ -115,6 +115,9 @@ body {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   max-width: 400px;
   width: 100%;
+  margin-left: 37%;
+
+  
 
   h2 {
     margin-bottom: 20px;
