Update contact form

--- a/assets/style/stile.less
+++ b/assets/style/stile.less
@@ -159,6 +159,7 @@ body {
   margin: 0;
   padding: 0;
 
+    
   li {
     position: relative;
     display: inline-block;
@@ -179,4 +180,10 @@ body {
     }
   }
 }
+
+.contact-form {
+  margin-left:0%;
+}
+
+
 }
