--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -162,10 +162,15 @@ body {
     width: 90%;
     max-width: 960px;
     text-align: center;        
-    font-size:130%;
-    font-weight: bold;
+    font-size:100%;
+    font-weight: bold;   
     color: white;
     font-family: 'Times New Roman', Times, serif;
+}
+
+.inner-social{
+    
+    font-weight: bold;
 }
 
 
